<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Ime"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLastNameTitle"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameTitle"
        app:layout_constraintEnd_toStartOf="@id/tvLastName"/>

    <TextView
        android:id="@+id/tvLastNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Prezime"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvNameTitle"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLastNameTitle"/>

    <TextView
        android:id="@+id/tvBirthDateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/DatumRodenja"
        app:layout_constraintTop_toBottomOf="@id/tvName"/>
    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvBirthDateTitle"/>

    <TextView
        android:id="@+id/tvSubjectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Predmet"
        app:layout_constraintTop_toBottomOf="@id/tvBirthDate"/>
    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubjectTitle"/>

    <TextView
        android:id="@+id/tvProfesorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Profesor"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubject"/>
    <TextView
        android:id="@+id/tvProfesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvProfesorTitle"/>

    <TextView
        android:id="@+id/tvAkGodinaTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/AkGodina"
        app:layout_constraintTop_toBottomOf="@id/tvProfesor"/>
    <TextView
        android:id="@+id/tvAkGodina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAkGodinaTitle"/>

    <TextView
        android:id="@+id/tvPredavanjaTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Predavanja"
        app:layout_constraintTop_toBottomOf="@id/tvAkGodina"/>
    <TextView
        android:id="@+id/tvPredavanja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvPredavanjaTitle"/>

    <TextView
        android:id="@+id/tvVjezbeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Vjezbe"
        app:layout_constraintTop_toBottomOf="@id/tvPredavanja"/>
    <TextView
        android:id="@+id/tvVjezbe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvVjezbeTitle"/>

</android.support.constraint.ConstraintLayout>